feat: add tela extrato basico

--- a/digibank/src/assets/styles/components/_sideBar.scss
+++ b/digibank/src/assets/styles/components/_sideBar.scss
@@ -6,6 +6,7 @@ $height: 100vh;
 aside {
   position: fixed;
   right: calc(0px - $width / 1.1);
+  top: 0;
 
   display: flex;
   justify-content: center;
