--- a/digibank/src/assets/styles/main.css
+++ b/digibank/src/assets/styles/main.css
@@ -171,6 +171,50 @@
   width: 100%;
 }
 
+.mainExtratos {
+  padding-top: 4rem;
+}
+.mainExtratos h1 {
+  font-size: 2.5rem;
+  text-transform: capitalize;
+  margin-bottom: 2rem;
+}
+.mainExtratos .headerListagem {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #f2f2f2;
+  border: 2px solid #b3b3b3;
+  width: 100%;
+  height: 3.5rem;
+  border-radius: 15px;
+  margin-bottom: 1.5rem;
+}
+.mainExtratos .headerListagem p {
+  font-size: 1.25rem;
+}
+.mainExtratos .listExtrato {
+  width: 100%;
+  overflow: auto;
+}
+.mainExtratos .listExtrato .bodyListagem {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  overflow: auto;
+  background-color: transparent;
+  border: 2px solid #b3b3b3;
+  border-radius: 15px;
+  padding: 0 2rem;
+  width: 100%;
+  height: 3.5rem;
+  margin-top: 0.5rem;
+}
+.mainExtratos .listExtrato .bodyListagem .data-valor {
+  display: flex;
+  gap: 2rem;
+}
+
 @font-face {
   font-family: "Montserrat";
   src: url(../fonts/Montserrat/Montserrat-VariableFont_wght.ttf) format("truetype");
@@ -579,6 +623,7 @@ h1 {
 aside {
   position: fixed;
   right: calc(0px - 72.7272727273vh);
+  top: 0;
   display: flex;
   justify-content: center;
   align-items: center;
